Minor style fixes
This fixes a number of small issues described in:
https://issues.apache.org/jira/browse/COUCHDB-2370:

 - don't truncate all headers if there is space
 - fix font size of active tasks title
 - add more space to the button in config/add-section
 - fix wording after verfying the installation
 - autfocus the add-section-modal in config

Closes COUCHDB-2370

--- a/app/addons/config/assets/less/config.less
+++ b/app/addons/config/assets/less/config.less
@@ -10,6 +10,9 @@
  *  License for the specific language governing permissions and limitations under
  *  the License.
  */
+button.addSection {
+  margin-bottom: 12px;
+}
 .config-item {
   height: 65px;
 
@@ -24,11 +27,26 @@
   .js-hidden {
     display: none;
   }
-  button {width: 7%;}
+
+  button { width: 7%;}
 }
 
 #add-section-modal .modal {
   width: 400px;
+  margin-left: -200px;
+  left: 50%;
+
+  input {
+    width: 100%;
+  }
+
+  form {
+    margin-bottom: 0px;
+  }
+
+  .modal-footer {
+    padding: 14px 0px 0px;
+  }
 }
 
 #config-trash {
@@ -45,3 +63,4 @@ table.config {
     }
   }
 }
+
